# FastAPI_test

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.cfg  tox.ini
api/routers/: orders.py
api/schemas/: orders.py
common/: settings.py
database/: db.py  models.py
migrations/: env.py
migrations/versions/: c75418327d6b_initial.py  d6e047e98fc1_initial_2.py
repositories/: dogs.py  orders.py  walkers.py
