[tool.poetry]
name = "fastapi test"
version = "0.1.0"
description = ""
authors = ["Aleksandr Vilkov <cholipso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
tox = "^4.16.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.8.0"
unify = "^0.5"
autoflake = "^2.3.1"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true